gitops-main/base/services/restaurant-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
  namespace: restaurant-service
  labels:
    app: restaurant-service
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: restaurant-service
          image: registry.gitlab.au.dk/swwao/f2025/exams-projects/group-7/restaurantservice:v1.9
          ports:
            - containerPort: 3000
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 5
          resources:
            requests:
              cpu: "15m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
