gitops-main/base/services/restaurant-service/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: restaurant-service
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
